Completion of General Pages v1
Have completed the general v1 release for the following pages:
- Home
- About
- Services
- Contact

--- a/SimpleCyberTech/Pages/Contact.cshtml
+++ b/SimpleCyberTech/Pages/Contact.cshtml
@@ -3,4 +3,35 @@
 @{
     ViewData["Title"] = "Contact Us";
 }
-<h1>@ViewData["Title"]</h1>
+<section id="HeroSection" class="position-relative vh-100 text-center">
+    <video autoPlay loop muted playsInline class="position-absolute top-0 start-0 w-100 h-100 object-fit-cover" autoplay muted loop playsinline>
+        <source src="/video/line-background-video.mp4" type="video/mp4" />
+    </video>
+    <div class="position-absolute d-flex align-items-center justify-content-center top-0 start-0 w-100 h-100" aria-hidden="true" />
+    <div class="container hero-jumbotron">
+        <h1 class="text-uppercase mb-3">We Are Here to Help</h1>
+        <h3 class="fst-italic my-3">Finding the right cybersecurity solution for your business is tough. Get more info about how we can help you.</h3>
+    </div>
+</section>
+
+<div class="parallax-group parallax-bg">
+    <section id="ContactSection" class="container">
+        <div class="glass-panel text-center p-3 p-md-5 my-5">
+            <h2>Get In Touch With Us</h2>
+            <p>Please use our calendar widget to book a free call with a specialist. Find out about our different services or bring any questions that you may have. If you want to reach us immediately or have an urgent matter, please call us at (949) 520-6805.</p>
+            <div class="justify-content-center my-3">
+                <iframe 
+                    src="https://api.leadconnectorhq.com/widget/booking/KBeG8jBiHmtmZmvXSrQv" 
+                    style="width: 100%; border:none; overflow: hidden;" 
+                    scrolling="no" 
+                    id="KBeG8jBiHmtmZmvXSrQv_1769558186400">
+                </iframe>
+            </div>
+        </div>
+    </section>
+</div>
+
+
+
+<!-- Javascript for Msgsndr form embed -->
+<script src="https://link.msgsndr.com/js/form_embed.js" type="text/javascript"></script>
