--- a/SimpleCyberTech/Pages/Contact.cshtml
+++ b/SimpleCyberTech/Pages/Contact.cshtml
@@ -3,11 +3,11 @@
 @{
     ViewData["Title"] = "Contact Us";
 }
-<section id="HeroSection" class="position-relative vh-100 text-center">
-    <video autoPlay loop muted playsInline class="position-absolute top-0 start-0 w-100 h-100 object-fit-cover" autoplay muted loop playsinline>
-        <source src="/video/line-background-video.mp4" type="video/mp4" />
+<section id="HeroSection">
+    <video autoplay muted loop playsinline>
+        <source src="/video/contact-us-hero-section.mp4" type="video/mp4" />
     </video>
-    <div class="position-absolute d-flex align-items-center justify-content-center top-0 start-0 w-100 h-100" aria-hidden="true" />
+    <div class="video-overlay" aria-hidden="true" />
     <div class="container hero-jumbotron">
         <h1 class="text-uppercase mb-3">We Are Here to Help</h1>
         <h3 class="fst-italic my-3">Finding the right cybersecurity solution for your business is tough. Get more info about how we can help you.</h3>
