--- a/SimpleCyberTech/Pages/Index.cshtml
+++ b/SimpleCyberTech/Pages/Index.cshtml
@@ -4,15 +4,14 @@
     ViewData["Title"] = "Home";
 }
 
-<section id="HeroSection" class="position-relative vh-100 text-center">
-    <video autoPlay loop muted playsInline class="position-absolute top-0 start-0 w-100 h-100 object-fit-cover" autoplay muted loop playsinline>
-        <source src="/video/line-background-video.mp4" type="video/mp4" />
+<section id="HeroSection">
+    <video autoPlay loop muted playsInline>
+        <source src="/video/homepage-hero-section.mp4" type="video/mp4" />
     </video>
-    <div class="position-absolute d-flex align-items-center justify-content-center top-0 start-0 w-100 h-100" aria-hidden="true" />
     <div class="container hero-jumbotron">
         <h1 class="text-uppercase mb-3">CyberSecurity, Technology and Help Desk Simplified</h1>
         <h3 class="fst-italic my-3">We protect Southern California's small and medium size businesses with stress and jargon free security you can trust. No technical gibberish, just clear solutions that keep your business safe from digital threats.</h3>
-        <a href="#" class="no-underline">
+        <a href="/contact#ContactSection" class="no-underline">
             <button class="py-3 px-5 my-3">Schedule Your Free Security Review</button>
         </a>
     </div>
