--- a/SimpleCyberTech/Pages/Shared/_Layout.cshtml
+++ b/SimpleCyberTech/Pages/Shared/_Layout.cshtml
@@ -11,8 +11,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MSH8HFZ7');</script>
+    <!-- End Google Tag Manager -->
 </head>
 <body class="font-roboto-regular">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MSH8HFZ7"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header class="sticky-top">
         <nav class="navbar navbar-expand-xl navbar-toggleable-xl navbar-dark px-3">
             <div class="container-fluid">
@@ -33,14 +45,14 @@
                             <a class="nav-link" href="/Contact">Contact Us</a>
                         </li>
                         <li class="nav-item d-xl-none">
-                            <a href="#">
-                                <button class="w-100 py-3 my-5" style="max-width: 500px;">Book a Meeting</button>
+                            <a href="/contact#ContactSection">
+                                <button class="w-100 py-3 my-5" style="max-width: 500px;">Schedule a Call</button>
                             </a>
                         </li>
                     </ul>
                 </div>
-                <a href="#" class="d-none d-xl-block">
-                    <button class="fs-6 px-3 py-2">Book a Meeting</button>
+                <a href="/contact#ContactSection" class="d-none d-xl-block">
+                    <button class="fs-6 px-3 py-2">Schedule a Call</button>
                 </a>
             </div>
         </nav>
@@ -69,12 +81,13 @@
                 <div class="col-auto mb-3 order-lg-3">
                     <h4 class="pb-3">Quick Links</h4>
                     <ul class="list-unstyled">
-                        <li><a href="/faq" class="">FAQ</a></li>
+                        <!-- <li><a href="/faq" class="">FAQ</a></li> -->
+                        <li><a href="/index" class="">Home</a></li>
                         <li><a href="/services" class="">Services</a></li>
                         <li><a href="/about" class="">About Us</a></li>
                         <li><a href="/contact" class="">Contact</a></li>
-                        <li><a href="/privacy" class="">Privacy Policy</a></li>
-                        <li><a href="/terms" class="">Terms of Service</a></li>
+                        <!-- <li><a href="/privacy" class="">Privacy Policy</a></li>
+                        <li><a href="/terms" class="">Terms of Service</a></li> -->
                     </ul>
                 </div>
                 <div class="col-auto mx-auto mx-xl-0 order-lg-1">
@@ -110,7 +123,7 @@
             </div>
         </div>
         <div class="container text-center py-3">
-            Copyright &copy; 2026 - Simple Cyber Technology.  All rights reserved.</span>
+            &copy; 2026 Simple Cyber Technology.  All rights reserved.</span>
         </div>
     </footer>
 
