--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -72,9 +72,8 @@
                         <li>949 South Coast Drive, Suite 280</li>
                         <li>Costa Mesa, CA 92626</li>
                         <li><a href="tel:9495206805">(949) 520-6805</a></li>
-                        <li><a href="mailto:support@simplecybertech.com">support@simplecybertech.com</a></li>
                         <br />
-                        <li>Mon-Fri: 9am - 6pm (PST)</li>
+                        <li>Mon-Fri: 8am - 6pm (PST)</li>
                         <li>Sat-Sun: Closed</li>
                     </ul>
                 </div>
@@ -94,7 +93,7 @@
                     <div class="mb-4"><img src="/img/logo-company-name-horizontal-dark.png" alt="Simple Cyber Tech Logo" class="footer-logo img-fluid"/></div>
                     <ul class="list-inline d-flex justify-content-between">
                         <li class="list-inline-item">
-                            <a href="#" class="text-decoration-none d-flex align-items-center">
+                            <a href="https://www.linkedin.com/company/simplecybertech/" target="_blank" class="text-decoration-none d-flex align-items-center">
                                 <img src="/img/social-linkedin-square.svg" alt="LinkedIn Icon" width="35" height="35" class="footer-social-icon me-2">
                             </a>
                         </li>
