URL and Page Updates
- Updated the URL's to be more canonical.
- Added Privacy Policy page
- Added Terms of Service Page
- Updated footer nav to include new pages.
- Updated Header and Footer Nav with updated Canonical URL's.

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -36,13 +36,13 @@
                 <div class="collapse navbar-collapse justify-content-center fs-5" id="navbarNavDropdown">
                     <ul class="navbar-nav pt-5 pt-xl-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="/About">About Us</a>
+                            <a class="nav-link" href="/about-us">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Services">Our Services</a>
+                            <a class="nav-link" href="/services-overview">Our Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Contact">Contact Us</a>
+                            <a class="nav-link" href="/contact-us">Contact Us</a>
                         </li>
                         <li class="nav-item d-xl-none">
                             <a href="/contact#ContactSection">
@@ -82,11 +82,11 @@
                     <ul class="list-unstyled">
                         <!-- <li><a href="/faq" class="">FAQ</a></li> -->
                         <li><a href="/index" class="">Home</a></li>
-                        <li><a href="/services" class="">Services</a></li>
-                        <li><a href="/about" class="">About Us</a></li>
-                        <li><a href="/contact" class="">Contact</a></li>
-                        <!-- <li><a href="/privacy" class="">Privacy Policy</a></li>
-                        <li><a href="/terms" class="">Terms of Service</a></li> -->
+                        <li><a href="/services-overview" class="">Services</a></li>
+                        <li><a href="/about-us" class="">About Us</a></li>
+                        <li><a href="/contact-us" class="">Contact</a></li>
+                        <li><a href="/privacy-policy" class="">Privacy Policy</a></li>
+                        <li><a href="/terms-of-service" class="">Terms of Service</a></li>
                     </ul>
                 </div>
                 <div class="col-auto mx-auto mx-xl-0 order-lg-1">
